update title and price

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>CJ Councelling</title>
+        <title>CJ Counselling</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/mini_flower.PNG" />
         <!-- Font Awesome icons (free version)-->
@@ -256,7 +256,7 @@ way of working allows me to tailor sessions to suit each client’s individual n
                                     </div>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
-                                        My current fee is £50 per 50-minute session in person and £40 per 50-minute
+                                        My current fee is £50 per 50-minute session in person and £45 per 50-minute
 session online.<br>
 I believe counselling should be accessible to as many people as possible, so I offer a
 limited number of low-cost slots, as well as concessions for students and those
