--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ way of working allows me to tailor sessions to suit each client’s individual n
                 <!-- Contact Section Form-->
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-7">
-                        <form id="contactForm" action="https://formsubmit.co/cj.counselling@hotmail.com" method="POST">
+                        <form id="contactForm" action="https://formsubmit.co/6a6335ff7925b304e962096dc62db383" method="POST">
                             <!-- Name input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control cream-color" name="name" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
