--- a/index.html
+++ b/index.html
@@ -70,13 +70,17 @@
                     <div class="col-lg-6 ms-auto"><p class="lead">Hi, I’m Charlotte, a fully qualified, Integrative Counsellor offering an open-minded,
 compassionate space where you can truly be yourself and explore your thoughts,
 feelings, and emotions in a judgment-free environment.<br>
+<br>
 I believe that everyone experiences and processes the world differently, so I tailor
 my approach to suit your individual needs and what makes you feel most
 comfortable. Starting therapy can feel daunting, but you don’t have to face it alone.
 I’ll walk alongside you at your pace, creating a space where you feel safe, heard,
 and supported.<br>
+<br>
 I work in a person-centred approach, incorporating elements from other modalities
-such as psychodynamic, Gestalt, CBT and transactional analysis. <br> This integrative
+such as psychodynamic, Gestalt, CBT and transactional analysis.<br>
+<br>
+This integrative
 approach allows me to draw on a variety of techniques, including creative
 interventions. Whether you enjoy art, writing, or other expressive tools, we can
 explore what feels most natural and helpful for you.<br>I work with adults from all walks of life. Whether you're feeling stuck, struggling with
