--- a/index.html
+++ b/index.html
@@ -89,18 +89,16 @@ I aim to offer warmth, patience, and a space where you can feel free to explore 
 thoughts and experiences without fear of judgment—somewhere you can show up
 as your full, authentic self and be met with acceptance.
 If this sounds like the kind of support you’re looking for, please feel free to get in
-touch. I’d love to talk about how we can begin your journey together.
+touch. I’d love to talk about how we can begin your journey together.<br><br>
                         
                         I’m a newly qualified counsellor with a Foundation Degree in Integrative Counselling
 and am a registered member of the National Counselling and Psychotherapy Society
 (NCPS). As part of my training, I worked for over a year as a volunteer counsellor
-
 with a low-cost counselling service, gaining valuable experience supporting a diverse
 range of clients.
 My core approach is person-centred, while also drawing on elements from
 psychodynamic therapy, Gestalt, transactional analysis, and CBT. This integrative
 way of working allows me to tailor sessions to suit each client’s individual needs.
-                        
                         </p></div>
                 </div>            
             </div>
