--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@ payment in advance may result in the session being cancelled.
                                     <h5>Cancellation Policy</h5>
                                                                         <p class="mb-4">
 Life can be unpredictable, and sometimes you may need to cancel a session. 
-I kindly ask for at least 48 hours’ notice if you need to cancel or reschedule a session.
-Less than 24 hours’ notice: the full session fee will be charged, as room hire costs still apply (unless online, see below).
+I kindly ask for at least 48 hours’ notice if you need to cancel or reschedule a session.<br>
+Less than 24 hours’ notice: the full session fee will be charged, as room hire costs still apply (unless online, see below).<br>
 24–48 hours’ notice: 50% of the session fee will be charged to cover fees.<br>
 If, for any reason, I need to cancel a session, I will give you as much notice as
 possible and do my best to rearrange at a time that suits you. Of course, there will be
