--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="google-site-verification" content="klyJDxEvCLGbhS4C-zs1dPH7GiOnXT-l2ICtyc75Jho" />
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>CJ Counselling</title>
