--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="google-site-verification" content="klyJDxEvCLGbhS4C-zs1dPH7GiOnXT-l2ICtyc75Jho" />
-        <meta name="description" content="" />
+        <meta name="description" content="Qualified Integrative Counsellor offering therapy in Chippenham, Trowbridge & online. Support for anxiety, depression, low self-esteem, and trauma in a safe space." />
         <meta name="author" content="" />
-        <title>CJ Counselling</title>
+        <title>Integrative Counsellor in Chippenham, Trowbridge & Online | CJ Counselling</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/mini_flower.PNG" />
         <!-- Font Awesome icons (free version)-->
