--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-6 ms-auto"><p class="lead">Hi, I’m Charlotte, a fully qualified, Integrative Counsellor offering an open-minded,
-compassionate space where you can truly be yourself and explore your thoughts,
-feelings, and emotions in a judgment-free environment.<br>
+                    <div class="col-lg-6 ms-auto"><p class="lead">Hi, I’m Charlotte — a fully qualified Integrative Counsellor working in Chippenham, Trowbridge, and online. I provide an open-minded, compassionate space where you can truly be yourself and explore your thoughts, feelings, and emotions in a non-judgmental environment.<br>
 <br>
 I believe that everyone experiences and processes the world differently, so I tailor
 my approach to suit your individual needs and what makes you feel most
@@ -101,14 +99,9 @@ as your full, authentic self and be met with acceptance.
 If this sounds like the kind of support you’re looking for, please feel free to get in
 touch. I’d love to talk about how we can begin your journey together.<br><br>
                         
-                        I’m a newly qualified counsellor with a Foundation Degree in Integrative Counselling
+                        I have a Foundation Degree in Integrative Counselling
 and am a registered member of the National Counselling and Psychotherapy Society
-(NCPS). As part of my training, I worked for over a year as a volunteer counsellor
-with a low-cost counselling service, gaining valuable experience supporting a diverse
-range of clients.
-My core approach is person-centred, while also drawing on elements from
-psychodynamic therapy, Gestalt, transactional analysis, and CBT. This integrative
-way of working allows me to tailor sessions to suit each client’s individual needs.
+(NCPS). 
                         </p></div>
                 </div>            
             </div>
